# 78shushu

./: .dockerignore  Cargo.toml  Dockerfile  README.md  compose.yml  debug.html
.github/workflows/: docker.yml
config/: config.toml
src/: cache.rs  config.rs  error.rs  generator.rs  logger.rs  main.rs  music.rs  question.rs  question_bank.rs  random.rs  routes.rs
src/models/: game.rs  mod.rs  music.rs  question.rs
static/: index.html  music.json  question.json  random.json  script.js  styles.css  utils.js
