[package]
name = "shushu78"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "^0.7.0"
tokio = { version = "^1.0.0", features = ["full"] }
tower = "^0.4.0"
tower-http = { version = "^0.5.0", features = ["cors", "fs", "set-header"] }
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
rand = "^0.8.0"
strum = { version = "^0.25.0", features = ["derive"] }
thiserror = "^1.0.0"
tracing = "^0.1.0"
tracing-subscriber = "^0.3.0"
