[package]
name = "shushu78"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "^0.7.0"
tokio = { version = "^1.0.0", features = ["full"] }
tower = "^0.4.0"
tower-http = { version = "^0.5.0", features = ["cors", "fs", "set-header", "compression-gzip"] }
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
rand = "^0.8.0"
thiserror = "^1.0.0"
tracing = "^0.1.0"
tracing-subscriber = { version = "^0.3.0", features = ["env-filter"] }
tracing-appender = "^0.2.0"
config = "^0.14.0"
once_cell = "^1.19.0"
